--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,5 +1,10 @@
 {
- "name": "App",
+ "name": "cryptophp",
+ "short_name": "cryptophp",
+ "start_url": "/",
+ "display": "standalone",
+ "background_color": "#ffffff",
+ "theme_color": "#ffffff",
  "icons": [
   {
    "src": "\/favicon/android-icon-36x36.png",
