--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,17 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "lockFileMaintenance": { "enabled": true },
+  "packageRules": [
+    {
+      "matchSourceUrls": [
+        "https://github.com/zeit/next.js",
+        "https://github.com/vercel/next.js"
+      ]
+    }
+  ],
+  "schedule": [
+    "before 2am"
   ]
 }
