--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "sharp": "^0.32.5",
     "swr": "^2.1.0",
     "typescript": "5.2.2",
     "zod": "^3.21.4"
