add file copy deployment

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -28,3 +28,7 @@ jobs:
           api_location: "" # Api source code path - optional
           output_location: "" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
+      - name: copy files
+        run: |
+          cp -R .next/static .next/standalone/.next/static
+          cp -R ./public .next/standalone/public
