--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -28,3 +28,4 @@ jobs:
           api_location: "" # Api source code path - optional
           output_location: "" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
+          production_branch: "main"
